Update intro slides with new content

--- a/intro.html
+++ b/intro.html
@@ -13,39 +13,43 @@
         <div class="slide active" id="slide1">
             <div class="content">
                 <div class="icon-container">
-                    <i class="fas fa-heart-pulse pulse"></i>
+                    <i class="fas fa-spa pulse"></i>
                 </div>
-                <h1 class="slide-in">Holistic Health Solutions</h1>
-                <p class="fade-in">"The natural healing force within each one of us is the greatest force in getting well."</p>
-                <p class="author fade-in">- Hippocrates</p>
-                <button class="next-btn bounce" onclick="showNext()">Next <i class="fas fa-arrow-right"></i></button>
+                <h1 class="slide-in">Your Journey to Wellness</h1>
+                <p class="fade-in">"Health is not just about what you're eating. It's also about what you're thinking and saying."</p>
+                <div class="icon-row fade-in">
+                    <i class="fas fa-heartbeat"></i>
+                    <i class="fas fa-brain"></i>
+                    <i class="fas fa-peace"></i>
+                </div>
+                <button class="next-btn bounce" onclick="showNext()">Discover More <i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
 
         <!-- Second Intro Slide -->
         <div class="slide" id="slide2">
             <div class="content">
-                <div class="icon-grid">
-                    <div class="icon-box rotate-in">
-                        <i class="fas fa-pills"></i>
+                <div class="feature-grid">
+                    <div class="feature-box rotate-in">
+                        <i class="fas fa-stethoscope"></i>
+                        <span>Expert Diagnosis</span>
+                    </div>
+                    <div class="feature-box rotate-in">
+                        <i class="fas fa-mortar-pestle"></i>
+                        <span>Natural Remedies</span>
+                    </div>
+                    <div class="feature-box rotate-in">
+                        <i class="fas fa-clinic-medical"></i>
                         <span>Modern Medicine</span>
                     </div>
-                    <div class="icon-box rotate-in">
-                        <i class="fas fa-leaf"></i>
-                        <span>Ayurveda</span>
-                    </div>
-                    <div class="icon-box rotate-in">
-                        <i class="fas fa-balance-scale"></i>
-                        <span>Balance</span>
-                    </div>
-                    <div class="icon-box rotate-in">
-                        <i class="fas fa-hand-holding-heart"></i>
-                        <span>Care</span>
+                    <div class="feature-box rotate-in">
+                        <i class="fas fa-om"></i>
+                        <span>Holistic Care</span>
                     </div>
                 </div>
-                <p class="quote fade-in">"The art of healing comes from nature, not from the physician."</p>
-                <p class="author fade-in">- Paracelsus</p>
-                <button class="start-btn bounce" onclick="window.location.href='index.html'">Start Consultation <i class="fas fa-stethoscope"></i></button>
+                <p class="quote fade-in">"The greatest wealth is health."</p>
+                <p class="author fade-in">- Ancient Wisdom</p>
+                <button class="start-btn bounce" onclick="window.location.href='index.html'">Begin Your Health Journey <i class="fas fa-door-open"></i></button>
             </div>
         </div>
     </div>
